<resources>
    <string name="app_name">XpNavigator</string>
    <string name="logout_label">Logout</string>
    <string name="api_key">81e692a4c7305deef90c59e2a79393bc</string>
    <string name="oauth_secret">462a62c3b68ee9675470d94eb0cc903c9876efc3fe985ad24aeeb83470c9f00e</string>
    <string name="login_label">Login</string>
    <string name="title_activity_board">Board</string>
    <string name="title_activity_board_members">MembersBoardActivity</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_edit_card">EditCardActivity</string>
    <string name="name_icon_view_members">Members</string>
    <string name="timer_label">Timer</string>
    <string name="my_boards">MY BOARDS</string>
    <string name="lists">Lists</string>
    <string name="card_title">Card Title</string>
    <string name="description">Description</string>
    <string name="imageviewdescription">imageViewDescription</string>
    <string name="imageView">imageView</string>
    <string name="tacofirstpage">TacoFirstPage</string>

    <string name="stop_alarm">Stop Alarm</string>
    <string name="headline_timer">Timer</string>
    <string name="lbl_done">done</string>

    <string-array name="board_activity_popup">
        <item>Add Card</item>
        <item>Change Name</item>
        <item>Save the world</item>

    </string-array>
    <string-array name="board_activity_child_popup">
        <item>Edit Card</item>
        <item>Delete Card</item>
        <item>Move Card</item>

    </string-array>
    <string name="title_activity_backlog">Boards</string>
    <string name="search_title">Search</string>
    <string name="search_hint">search_hint</string>
    <string name="title_activity_logout">LogoutActivity</string>

    <string name="header_list_member_category_type">Type</string>
    <string name="header_list_member_category_name">Name</string>
    <string name="header_list_member_text">MEMBER</string>

    <string name="header_list_nonmember_category_name">Name</string>
    <string name="header_list_nonmember_text">NONMEMBER</string>
</resources>
