<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_header_member"
    android:clickable="false"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_memberlist"
        android:textColor="@android:color/black"
        android:background="@color/background_color_board_members_titles"
        android:gravity="center"
        android:text="@string/header_list_member_text"

        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_memberlist"
        android:id="@+id/categorie_title"
        android:paddingTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingBottom="10dp"
        android:background="@color/background_color_board_members_category"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/member_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"

            android:text="@string/header_list_member_category_name"

            android:paddingLeft="40dp"
            android:layout_alignParentLeft="true"

            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/member_type"
            android:textSize="16sp"
            android:textColor="@android:color/black"

            android:text="@string/header_list_member_category_type"

            android:gravity="left"
            android:paddingRight="40dp"

            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>